<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/easyButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/main_easy_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginnerButton" />

    <Button
        android:id="@+id/beginnerButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/main_beginner_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/main_medium_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyButton" />

    <Button
        android:id="@+id/difficultButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/main_difficult_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

    <Button
        android:id="@+id/impossibleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/main_impossible_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultButton" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="138dp"
        android:layout_height="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/main_text_5"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/beginnerButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="57dp"
        android:text="@string/main_text_6"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/easyButton"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="57dp"
        android:text="@string/main_text_7"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/mediumButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="57dp"
        android:text="@string/main_text_8"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/difficultButton"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="57dp"
        android:text="@string/main_text_9"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/impossibleButton"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/score_beginner"
        android:layout_width="67dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <ImageView
        android:id="@+id/score_easy"
        android:layout_width="67dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/score_beginner"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <ImageView
        android:id="@+id/score_medium"
        android:layout_width="67dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/score_easy"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <ImageView
        android:id="@+id/score_difficult"
        android:layout_width="67dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/score_medium"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <ImageView
        android:id="@+id/score_impossible"
        android:layout_width="67dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/score_difficult"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

</androidx.constraintlayout.widget.ConstraintLayout>